# noise_cancellation_ai_trainer

./: CMakeLists.txt  README.md
include/: DFT.h  NN.h  RNG.h  file_stream.h  portaudio.h  raylib.h  util.h
src/: DFT.c  NN.c  RNG.c  run_main.c  train_main.c  wav_main.c  wav_player.c
